--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,19 +5,25 @@
 
     <!-- 添加新的人脸识别素材 -->
     <string name="add_face">采集人脸</string>
-    <string name="camera_topic_face_recognition_realtime">/camera/rgb/image_color</string>
+    <string name="camera_topic_face_recognition_realtime">/camera/rgb/image_color/compressed</string>
+    <string name="topicName_of_add_face_for_face_recognition">/rosControl/fr/addFace</string>
+    <string name="nodeName_of_add_face_for_face_recognition">addFaceNode</string>
     <!-- 处理前的视频图像 -->
     <string name="camera_face_recognition_origin">原始图像</string>
     <string name="camera_topic_face_recognition_origin">/camera/rgb/image_color/compressed</string>
+
     <!-- 处理后的视频图像 -->
-    <string name="camera_face_recognition_handled">人脸检测结果</string>
-    <string name="camera_topic_face_recognition_handled">/webcam/image_raw</string>
+    <string name="camera_face_detection_handled">人脸识别结果</string>
+    <string name="camera_topic_face_detection_handled">/webcam/image_raw</string>
+    <!-- 处理后的视频图像 -->
+    <string name="camera_face_recognition_handled">人脸识别结果</string>
+    <string name="camera_topic_face_recognition_handled">/webcam/fr_image_raw</string>
     <!-- 处理前的视频图像 -->
     <string name="camera_face_detection_origin">原始图像</string>
     <string name="camera_topic_face_detection_origin">/camera/rgb/image_color/compressed</string>
     <!-- 处理后的视频图像 -->
-    <string name="camera_face_detection_handled">人脸检测结果</string>
-    <string name="camera_topic_face_detection_handled">/webcam/image_raw</string>
+    <string name="camera_expression_recognition_handled">情绪识别结果</string>
+    <string name="camera_topic_expression_recognition_handled">/webcam/er_image_raw</string>
     <!-- Robot chooser strings -->
     <string name="add_robot">添加机器人</string>
     <string name="edit_robot">编辑机器人</string>
